# hyprmacs

./: .gitignore  AGENTS.md  Makefile  README.org  flake.nix  justfile
docs/adr/: 0001-v1-boundaries.org  0002-hidden-client-strategy.org  0003-hyprmacs-workspace-policy.org  0004-auxiliary-window-classification.org  0005-disconnect-recovery.org
docs/architecture/: non-floating-managed-layout-spec.md  v1-scope.org
docs/protocol/: ipc-v1.org
docs/setup/: nixos-real-hyprland.org
docs/superpowers/plans/: 2026-04-15-hyprmacs-iterative-implementation.org  2026-04-24-usability-ergonomics.md
docs/superpowers/specs/: 2026-04-24-usability-ergonomics-design.md
docs/testing/: demo-script.org  e2e-use-cases.md  manual-smoke-tests.org
emacs/: hyprmacs-buffers.el  hyprmacs-ipc.el  hyprmacs-layout.el  hyprmacs-session.el  hyprmacs.el
nix/: hyprmacs-plugin.nix
plugin/: CMakeLists.txt
plugin/include/hyprmacs/: client_classifier.hpp  client_registry.hpp  dispatchers.hpp  focus_controller.hpp  ipc_server.hpp  layout_applier.hpp  plugin_state.hpp  protocol.hpp  workspace_manager.hpp
plugin/src/: client_classifier.cpp  client_registry.cpp  dispatchers.cpp  focus_controller.cpp  ipc_server.cpp  layout_applier.cpp  plugin_main.cpp  protocol.cpp  workspace_manager.cpp
plugin/tests/: CMakeLists.txt  client_registry_tests.cpp  dispatchers_tests.cpp  focus_controller_tests.cpp  ipc_server_tests.cpp  layout_applier_tests.cpp  plugin_main_tests.cpp  plugin_symbol_smoke.cpp  protocol_tests.cpp  workspace_manager_tests.cpp
scripts/: hyprmacs-e2e-nested.sh
tests/e2e/: full-flow.el  manifest-tests.el  required-assertions.txt
tests/emacs/: bootstrap-tests.el  buffer-tests.el  layout-tests.el  protocol-tests.el  reconnect-tests.el  session-tests.el
